feat: implement SaaS security enhancements, KVKK compliance, MIS integration, and Safranbolu sync fix